static/css/base.css
/* Containers */
html { 
    height: 100vh;
}

body {
    display: flex;
    flex-direction: column;
    min-height: 100%;
    font-family: 'Lato', sans-serif;
}


.container:not(.header-container),
.miniatures-container {
    flex: 1;
    margin-top: 45px;
}

/* From Bulma */
.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

.overlay {
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    position: fixed;
    background: #fafafa;
    z-index: -1;
}

.main-logo-link,
.main-logo-link:hover,
.main-logo-link:active {
    color: #333333;   
}

.cart-item-counter {
    background: #7ab648;
    color: #fafafa;
    min-height: 1.2rem;
    min-width: 1.2rem;
    top: 0;
    right: 26px;
    border-radius: 50%;
    line-height: 1.25rem;
    font-size: .7rem;
}

.search-dropdown {
    transform: translate3d(-276px, 64px, 0px) !important;
}

.search-form {
    width: 325px;
}

#shipping-banner {
    background-color: #333333;
}

.dropdown-item {
    font-size: 11px;
}

.dropdown-item:hover,
.dropdown-item:active {
    background-color: #7ab648;
    color: #fafafa;
}

/* Main Carousel */
.carousel-item img {
    background-size: cover;
    min-height: 250px;
}

.tinted { 
    opacity: 0.75; 
}

/* Buttons */ 
.btn,
.btn:active,
.btn:hover,
.btn:focus {
    border-radius: 0;
}

.order-now-button {
    background: #222;
    color: #fafafa;
    min-width: 260px;
}


.btn-green {
    background: #7ab648;
    color: #fafafa;
}
.btn-black {
    background: black;
    color: #fafafa;
}

.btn-outline-black {
    background: white;
    color: #333333 !important;
    border: 1px solid #333333;
}

.order-now-button:hover, 
.order-now-button:active,
.order-now-button:focus,
.btn-black:hover,
.btn-black:active,
.btn-black:focus,
.btn-outline-black:hover,
.btn-outline-black:active,
.btn-outline-black:focus  {
    background: #333333;
    color: #fafafa !important;
}

.btn-green:hover,
.btn-green:active,
.btn-green:focus {
    background: #fafafa;
    color: #333333 !important;
    border-color: #333333;
}

a.army-badge > span.badge:hover,
a.gs-badge > span.badge:hover {
    background: #7ab648;
    color: #fafafa !important;
}

.btt-button {
    height: 42px;
    width: 42px;
    position: fixed;
    bottom: 60px;
    right: 10px;    
}

.btt-link,
.update-link,
.remove-item {
    cursor: pointer;
}

/* Typography */
.logo-font  {
    font-family: 'Julius Sans One', sans-serif;
    font-size: 18px;  
}

.nav-font {
    font-family: 'Julius Sans One', sans-serif;
    font-size: 12px;
}

.shipping-font {
    color: #fafafa;
    font-family: 'Julius Sans One', sans-serif;
    font-size: 14px;
}

.nav-icon-txt {
    font-family: 'Julius Sans One', sans-serif;
    font-size: 10px;
}

.green-text {
    color: #7ab648 !important;
}

.text-center {
    height: min-content;
}

.text-black {
    color: #000 !important;    
}

.text-shadow {
    text-shadow: 2px 2px 4px #333333;
}

.border-black {
    border: 1px solid #000 !important;
}

.border-white {
    border: 1px solid white !important;
}

.bg-black {
    background: #333333 !important;
}

.hero-text {
    font-family: 'Julius Sans One', sans-serif;
    font-weight: bolder;    
}


.form-search-label {
    font-size:13.5px;
}


#topnav a h2,
#topnav a h4,
.mobile-logo {
    width: max-content;
    padding: 8px;
    border: 1px solid #000;
}

/* Footer */
footer {
    background-color: #333333;
    color: #fafafa;
    font-family: 'Lato', sans-serif;     
    bottom: 0;  
}

footer i {
    color: #fafafa;
}

.footer-logo {        
    width: max-content;
    padding: 6px;
    border: 1px solid white;      
}

.footer-link {
    font-family: 'Julius Sans One', sans-serif; 
    font-size: 18px;
}

input[name='q']::placeholder {
    color: #aab7c4;
}

/*Bootstrap Toasts */

.message-container {
    position: fixed;
    top: 72px;
    right: 15px;
    z-index: 99999999999;
}

.custom-toast {
    overflow: visible;
}

.toast-capper {
    height: 2px;
}

/* From CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
.arrow-up {
    width: 0; 
    height: 0; 
    border-left: 4px solid transparent;
    border-right: 4px solid transparent; 
    border-bottom: 10px solid black;
    position: absolute;
    top: -10px;
    right: 26px;
}

/* Convenience Classes - Colors Copied From Bootstrap */
.arrow-primary {
    border-bottom-color: #007bff !important;
}

.arrow-secondary {
    border-bottom-color: #6c757d !important;
}

.arrow-success {
    border-bottom-color: #28a745 !important;
}

.arrow-danger {
    border-bottom-color: #dc3545 !important;
}

.arrow-warning {
    border-bottom-color: #ffc107 !important;
}

.arrow-info {
    border-bottom-color: #17a2b8 !important;
}

.arrow-light {
    border-bottom-color: #f8f9fa !important;
}

.arrow-dark {
    border-bottom-color: #343a40 !important;
}

.cart-notification-wrapper {
    height: 100px;
    overflow-x: hidden;
    overflow-y: auto;
}

.cart-notification-font {
    font-family: 'Julius Sans One', sans-serif;
    font-size:  13px;
}

/* Allauth Form Formatting */ 
.allauth-row {
    max-width: 99vw;
    min-height: 82.1vh;
    height: calc(100vh - 168px);
}

.allauth-form-inner-content p {
    margin-top: 1.5rem; 
    color: #333333;
}

.allauth-form-inner-content input {
    border-color: #333333;
    border-radius: 0;
}

.allauth-form-inner-content label:not([for='id_remember']) {
    display: none;
}

.allauth-form-inner-content input::placeholder {
    color: #aab7c4;
}

.allauth-form-inner-content button,
.allauth-form-inner-content input[type='submit'] {
	/* btn */
	display: inline-block;
    font-weight: 400;
    color: #fff;
    text-align: center;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-color: #7ab648;
    border: 1px solid #7ab648;
    padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: 0;

    /* standard bootstrap btn transitions */
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

.allauth-form-inner-content button:hover,
.allauth-form-inner-content input[type='submit']:hover {	
	color: #333333;
    background-color: #fafafa;
    border-color: #333333;
}

.allauth-form-inner-content a:not(#social-links~) {
	color: #7ab648; /* green-text */
}

/* Miniature Form */ 
.btn-file {
    position: relative;
    overflow: hidden;
}

.btn-file input[type="file"] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    opacity: 0;
    cursor: pointer;
}

.custom-checkbox .custom-control-label::before {
    border-radius: 0;
    border-color: #dc3545;
}

.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
    background-color: #dc3545;
    border-color: #dc3545;
    border-radius: 0;
}


/*--Media Queries-- */

/* Slightly larger container width, logo and nav fonts on xl screens */
@media (min-width: 1200px) {
    .container {
        max-width: 80%;
    }  

    .logo-font  {
        font-size: 28px;  
    }

    .nav-font {
        font-size: 22px;
    }

    .dropdown-item {
        font-size: 15px;
    }
    
    .shipping-font {
        font-size: 20px;
    }

    .nav-icon-txt {
        font-size: 12px;
    }
}

/* Fixed top-navbar, footer height, carousel-caption width only on medium and up */
@media (min-width: 992px) {
    .fixed-top-desktop-only {
        position: fixed;
        top: 0;
        right: 0;
        left: 0;
        z-index: 1030;
    }

    .header-container {
        padding-top: 66px;
    }  
    
    .carousel-caption {
    width: 650px;
    background-color: rgba(55, 55, 55, 0.8);
    margin-bottom: 7rem;
    }
         
    footer {
        max-height: 55px;         
    }
}

/* Adds top padding when the navbar is collapsed on mobile */
@media (max-width: 991px) {
    .header-container {
        padding-top: 114px;
    }

    body {
        height: calc(100vh - 150px);
    }

    #carouselHomeSlidesOnly {
        padding-top: 44px;
    }

    .btn.btn-outline-black.rounded-0,
    .btn.btn-black.rounded-0,
    .btn.btn-green.rounded-0 {
        padding: .375rem .375rem;
    }

    .btn.btn-outline-black.rounded-0.btn-lg,
    .btn.btn-black.rounded-0.btn-lg,
    .btn.btn-green.rounded-0.btn-lg {
        padding: .375rem .375rem;
        font-size: .75rem;
    }
    
    .increment-qty, .decrement-qty {
        padding: .25rem .5rem !important;
    }
}

@media (max-width: 320px) {
    #carouselHomeSlidesOnly {
        padding-top: 108px;
    }
}

